# sentinel

./: .codex-review.toml  .gitignore  .pre-commit-config.yaml  .toolkit-manifest  .touchstone-config  .touchstone-manifest  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  setup.sh
.claude/: loop.md  settings.json
.claude/agents/: sentinel-coder.md  sentinel-monitor.md  sentinel-reviewer.md
.claude/skills/sentinel-plan/: SKILL.md
.claude/skills/sentinel-research/: SKILL.md
.claude/skills/sentinel-scan/: SKILL.md
.cortex/plans/: sentinel-autonomous-engineer.md  sentinel-codex-identifier-rename.md  sentinel-conductor-migration.md  sentinel-cortex-t16-integration.md  sentinel-trust-controls.md
.cursor/rules/: conductor-delegation.mdc
.github/workflows/: release.yml
.sentinel/: config.toml
defaults/doctrine/: 0001-tests-accompany-behavior-changes.md  0002-api-breaks-require-migration-notes.md  0003-no-secrets-in-source.md  0004-avoid-premature-abstraction.md  0005-functions-short-unless-justified.md  0006-one-concept-per-pr.md  0007-refactor-only-on-green.md  0008-dont-bypass-review-gates.md  0009-prefer-reversible-changes.md  0010-comments-explain-why.md  0011-validate-at-boundaries.md  0012-match-scope-to-request.md  0013-failing-tests-are-blocking.md  0014-dependencies-are-liability.md  0015-names-are-the-interface.md
docs/: cycle-artifact-schema.md
examples/lenses/conditional/: accessibility.md  api-design.md  cost-efficiency.md  data-integrity.md  ui-design.md
examples/lenses/universal/: dependencies.md  reliability.md  technical-debt.md  testing.md
lenses/: README.md
lenses/conditional/: performance.md
lenses/universal/: architecture.md  code-quality.md  developer-experience.md  security.md
plans/: conductor-migration.md  dogfood-2026-04-17.md  production-ready.md
principles/: README.md  audit-weak-points.md  documentation-ownership.md  engineering-principles.md  git-workflow.md  pre-implementation-checklist.md
scripts/: branch-guard.sh  cleanup-branches.sh  codex-review.sh  emergency-disclosure.sh  open-pr.sh  release.sh  run-pytest-in-venv.sh  touchstone-run.sh
src/sentinel/: __init__.py  banner.py  budget.py  budget_ctx.py  docs.py  gate.py  git_ops.py  journal.py  loop_guard.py  pr.py  prune.py  recommendations.py  scheduler.py  siblings.py  state.py  tools.py  verify.py  worktree.py
src/sentinel/cli/: cost_cmd.py  cycle_cmd.py  init_cmd.py  main.py  plan_cmd.py  scan_cmd.py  (+4 more)
templates/.claude/: loop.md
tests/: conftest.py  test_banner.py  test_budget_ctx.py  test_cli.py  test_coder_cli_help.py  test_coder_grounding.py  test_coder_iteration.py  test_coder_postmortem.py  test_coder_timeout.py  test_conductor_adapter.py  test_config.py  test_cortex_integration.py  test_cortex_read.py  test_docs.py  test_failure_summary.py  test_gate.py  test_git_ops.py  test_hang_tolerance.py  test_init_scenarios.py  test_init_seed_doctrine.py  test_integration_registry.py  test_integration_rejections.py  test_journal.py  test_json_parsing.py  test_lens_scope.py  test_loop_guard.py  test_openai_ndjson.py  test_plan_cmd.py  test_plan_only.py  test_pr.py  test_proposal_dedupe.py  test_providers.py  test_prune.py  test_remaining_backlog_filtered.py  test_researcher.py  test_roles.py  test_rolling_budget.py  test_router.py  test_run_artifact_schema.py  test_scan_failure.py  (+7 more)
(+24 files in other folders)
