[project]
name = "sentinel"
version = "0.1.0"
description = "Autonomous meta-agent for managing software projects across multiple LLM providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Henry Modisett" }]
keywords = ["ai", "agent", "meta-agent", "llm", "project-management", "autonomous"]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.1.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
