[project]
name = "sentinel"
dynamic = ["version"]
description = "Autonomous meta-agent for managing software projects across multiple LLM providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Henry Modisett" }]
keywords = ["ai", "agent", "meta-agent", "llm", "project-management", "autonomous"]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "tomli-w>=1.1.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
# Pin the dependency-resolution cutoff to a fixed date so `uv lock` /
# `uv sync` produce a byte-identical uv.lock across machines and days.
# Without this, the system-level UV_EXCLUDE_NEWER policy (a rolling
# 7-day window) bakes a fresh "now - 7 days" timestamp into uv.lock's
# [options] block on every invocation, churning a 4-line diff with no
# actual dependency change. Bump this date deliberately when you want
# to refresh deps — it becomes a single intentional "refresh deps" PR
# instead of accidental noise on unrelated branches.
exclude-newer = "2026-04-25T00:00:00Z"

[tool.hatch.version]
# Derive version from git so `uv tool install --force` always sees a
# unique cache key — dogfood on portfolio_new (2026-04-17) showed that
# reinstalling from the same version (0.2.0) served a stale cached
# wheel missing the just-committed fix. Dev builds get suffixes like
# `0.2.0.post12+g49c9044`; tagged releases are clean (`0.2.1`).
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
# Write the resolved version into the package at build time so the
# installed wheel carries it — read back via importlib.metadata at
# runtime (see src/sentinel/__init__.py).
version-file = "src/sentinel/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
